--- a/webapp.html
+++ b/webapp.html
@@ -68,8 +68,13 @@
     </div>
 
     <br>
-    <a href="index.html">Resume</a>
-    <a href="scratch.html">Ice Skating</a>
+    <p>Links</p>
+    <a href="index.html" style="color: #000000; font-weight: bold;">Home</a>
+    <a href="scratch.html" style="color: #000000; font-weight: bold;">Scratch</a>
+    <br>
+    <br>
+    <br>
+    
   </div>
 
   <script>
